force-app/main/default/objects/RE_Margin_Aspiration__c/RE_Margin_Aspiration__c.object-meta.xml
<CustomObject>
    <label>Margin Aspiration</label>
    <nameField>
        <label>Margin Aspiration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Margin Aspirations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>