force-app/main/default/objects/RE_Margin_Aspiration__c/fields/RE_Margins_USD_BBL__c.field-meta.xml
<CustomField>
    <fullName>RE_Margins_USD_BBL__c</fullName>
    <label>Margins (USD/BBL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>