force-app/main/default/objects/RE_Margin_Aspiration__c/fields/RE_Price_Levels_SGD_CTS_LTR__c.field-meta.xml
<CustomField>
    <fullName>RE_Price_Levels_SGD_CTS_LTR__c</fullName>
    <label>Price Levels (SGD CTS/LTR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>